HTML/CSS almost finished

--- a/frontend/fundamentals/html-css/page2.html
+++ b/frontend/fundamentals/html-css/page2.html
@@ -25,21 +25,11 @@
             <a href=""> Products </a>
             <a href=""> Contact Us </a>
             <hr>
-
-            <nav class="navbar">
-                <ul>
-                    <li><a href="index.html"> Home </a></li>
-                    <li><a href="about.html"> About us </a></li>
-                    <li><a href=""> Products </a></li>
-                    <li><a href=""> Contact Us </a></li>
-                </ul>
-            </nav>
-            
         </header>
 
         <main>
 
-        <br> <br> <!-- line break -->
+
         <h2 style="background-color: aqua;"> Title of level 2 heading </h2>
         <h3> Title of level 3 heading </h3>
         <hr> <!-- horizontal line -->
@@ -418,58 +408,15 @@
 
         <br> <br> <!-- line break -->
 
-        <div class="dropdown"> 
-            <button> Food </button>
-            <div class="content">
-                <a href=""> Bread </a>
-                <a href=""> Brioche </a>
-                <a href=""> Bagel </a>
-            </div>
-        </div>
-
-        <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam excepturi sed ullam velit ratione, modi sunt non, laudantium provident amet ducimus fuga laborum obcaecati nesciunt hic perspiciatis, soluta suscipit autem.</p>
-
-        <br> <br> <!-- line break -->
-
-        <div class="gallery"> 
-            <a target="_blank" href="assets/1.png">
-                <img src="assets/1.png" alt="Green">
-            </a>
-            <div class="description"> Green </div>
-        </div>
-
-        <div class="gallery"> 
-            <a target="_blank" href="assets/2.png">
-                <img src="assets/2.png" alt="Donkey">
-            </a>
-            <div class="description"> Donkey </div>
-        </div>
-
-        <div class="gallery"> 
-            <a target="_blank" href="assets/3.png">
-                <img src="assets/3.png" alt="Bass">
-            </a>
-            <div class="description"> Bass </div>
-        </div>
-        
-        <a href="https://fr.wikipedia.org/wiki/X_(r%C3%A9seau_social)">
-           <svg class="logo" viewBox="0 0 160 30">
-                <path d="M24 4.557a9.83 9.83 0 0 1-2.828.775 4.932 4.932 0 0 0 2.165-2.724 9.864 9.864 0 0 1-3.127 1.195 4.916 4.916 0 0 0-8.384 4.482A13.94 13.94 0 0 1 1.671 3.149a4.916 4.916 0 0 0 1.523 6.556 4.903 4.903 0 0 1-2.228-.616c-.054 2.28 1.581 4.415 3.949 4.89a4.935 4.935 0 0 1-2.224.084 4.918 4.918 0 0 0 4.588 3.417A9.867 9.867 0 0 1 0 19.54a13.905 13.905 0 0 0 7.548 2.212c9.056 0 14.01-7.506 14.01-14.01 0-.213-.005-.425-.014-.636A10.012 10.012 0 0 0 24 4.557z"/>
-            </svg>
-        </a>
-
         ️<div class="pagination" style="background-color: white;">
             <a href=""><</a>
-            <a href="index.html" class="active">1</a>
-            <a href="page2.html">2</a>
-            <a href="other.html">3</a>
+            <a href="index.html">1</a>
+            <a href="other.html" class="active">2</a>
+            <a href="">3</a>
             <a href="">4</a>
             <a href="">5</a>
             <a href="">></a>
         </div>
-
-
-
     </main>
 
         <footer style="background-color: mediumpurple;">
